# publication-scraper

./: .env.sample  .gitignore  Dockerfile  README.md  config.py  example_input.xlsx  input.csv  pubmed_api.py  pyproject.toml  run.sh  secrets.sample
.github/workflows/: docker-image.yml  pytest.yml
pubscraper/: config.py  main.py
pubscraper/APIClasses/: Base.py  CrossRef.py  Elsevier.py  IEEE.py  MDPI.py  PLOS.py  PubMed.py  Springer.py  Wiley.py  arXiv.py
tests/: CrossRef_out.yaml  PLOS_out.yaml  Wiley_out.yaml  arXiv_out.yaml  elsevier_out.yaml  responses_PubMed.yaml  test_CrossRef.py  test_Elsevier.py  test_MDPI.py  test_PLOS.py  test_PubMed.py  test_Springer.py  test_Wiley.py  test_arXiv.py  test_main.py
tests/responses_main/: help.txt  list.txt
